--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,7 +23,7 @@
   position: sticky;
   top: 0;
   z-index: 99;
-  background-color: #fff; /* White background */
+  /* background-color: #fff; White background */
   padding: 10px 0;
 }
 
